html files added and styled
Forgot to log changes for a while.
New html pages created and mostly styled:
about.html
checkout.html
checkout-succes.html
contact.html
about.html

Added links to the new pages from the old pages.

--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,8 @@ a {
   color: var(--dark-blue);
 }
 
+
+
 button {
   transition: all 0.3s ease-in-out;
 }
@@ -87,6 +89,7 @@ button {
   box-sizing: border-box;
   font-weight: bold;
   border: 3px solid transparent;
+  cursor: pointer;
 }
 
 .cta:hover {
@@ -98,8 +101,7 @@ button {
 
 .cta-light {
   background-color: transparent;
-  border: 2px solid;
-  border-color: var(--light-blue);
+  border: 2px solid; var(--light-blue);
   font-size: 1em;
   margin: 20px 0;
   display: inline-block;
@@ -108,14 +110,14 @@ button {
 .cta-light:hover {
   background-color: var(--light-blue);
   color: var(--dark-blue);
-  border: none;
+  border: 2px solid transparent;
 }
 
 .dark-button {
   background-color: var(--dark-blue);
   color: var(--light-blue);
   border: none;
-  padding: 15px 0;
+  padding: 15px 40px;
   border-radius: 30px;
   text-transform: uppercase;
 }
@@ -123,11 +125,13 @@ button {
 .dark-button:hover {
   background-color: #1b2547;
 }
+
 /*Breadcrumbs*/
 
 .breadcrumbs a {
   display: inline-flex;
   margin: 10px;
+  color: var(--dark-blue);
 }
 
 .breadcrumbs a:hover {
@@ -167,7 +171,10 @@ body.active li.active a {
 }
 
 nav ul,
-footer ul {
+footer ul,
+.address-form ul,
+.billing-form ul,
+.contact-form ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -413,11 +420,14 @@ footer {
 
 /* SECTION - Best sellers */
 section.bestsellers {
-  margin: 30px auto;
+  margin:0, auto;
+  margin-top: 30px;
+
 }
 
 .bestsellers h2 {
   margin-bottom: 15px;
+  margin-left: 20px;
 }
 
 .container-best-sellers {
@@ -454,16 +464,38 @@ section.subscribe {
   font-weight: bold;
 }
 
-.subscribe input[type="email"] {
+input[type="email"], 
+input[type="text"],
+input[type="tel"],
+input[type="date"],
+textarea,
+select {
   padding: 15px 20px;
   box-sizing: border-box;
-  border: none;
+  border: 2px solid rgba(17,23,45, .2);
   background-color: var(--light-blue);
   border-radius: 5px;
+  color: var(--dark-blue);
+  width: 100%;
 }
 
-.subscribe input[type="email"]:focus {
+input[type="email"]:focus,
+input[type="text"]:focus,
+input[type="tel"]:focus,
+input[type="date"]:focus,
+textarea:focus,
+select:focus {
   outline: 2px solid var(--bright-blue);
+  border: none;
+}
+
+input[type="email"]:hover,
+input[type="text"]:hover,
+input[type="tel"]:hover,
+input[type="date"]:hover,
+textarea:hover,
+select:hover {
+background-color: rgba(245,250,252, .65);
 }
 
 
@@ -689,7 +721,11 @@ button.filter {
   display: none;
 }
 
-.radio-colors li label:before {
+.radio-colors label:hover, .radio-sizes label:hover {
+  cursor: pointer;
+}
+
+.radio-colors li label::before {
   content: "";
   width: 30px;
   height: 30px;
@@ -697,19 +733,19 @@ button.filter {
   position: relative;
 }
 
-.radio-colors li label#color-swatch-red:before {
+.radio-colors li label#color-swatch-red::before {
   background-color: #C53C30;
 }
 
-.radio-colors li label#color-swatch-yellow:before {
+.radio-colors li label#color-swatch-yellow::before {
   background-color: #DBC200;
 }
 
-.radio-colors li label#color-swatch-blue:before {
+.radio-colors li label#color-swatch-blue::before {
   background-color: #3C96B7;
 }
 
-.radio-colors li label#color-swatch-green:before {
+.radio-colors li label#color-swatch-green::before {
   background-color: #5B7E0E;
 }
 
@@ -852,7 +888,8 @@ position: absolute;
 }
 
 #h2-description:hover, #h2-size:hover {
-  background-color: rgba(17,23,45, .2)
+  background-color: rgba(17,23,45, .2);
+  cursor: pointer;
 }
 
 .product-description p {
@@ -897,12 +934,261 @@ position: absolute;
   right: 12px;
 }
 
-#description:checked ~ #h2-description h2::after, #size-guide:checked ~ #h2-size h2::after {
+#description:checked ~ #h2-description h2::after, 
+#size-guide:checked ~ #h2-size h2::after {
   background-image: url(/images/chevron-up.png);
 }
 
+/* --- ABOUT PAGE --- */
 
-/* MEDIA QUERIES */
+#about-img {
+  background: url(/images/about.jpg) 0% 25%/cover;
+  min-height: 350px;
+}
+
+.about-light-section {
+  text-align: center;
+  padding: 30px 16px;
+}
+
+.about-light-section p {
+  padding-left: 15%;
+  padding-right: 15%;
+  line-height: 1.5em;
+  margin-top: 15px;
+}
+
+/* --- CHECKOUT PAGE --- */
+.shopping-cart,
+.address,
+.billing,
+.contact-form {
+  background-color: var(--light-grey);
+  padding: 5%;
+  margin: 15px 0 30px;
+}
+
+.container-checkout h2, .billing h2 {
+  margin-bottom: 20px;
+}
+
+.cart-item {
+  display: flex;
+}
+
+.cart-item span {
+  display: block;
+}
+
+.cart-item img {
+  width: 25%;
+  flex-basis: 25%;
+}
+
+.jacket-info-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 0 15px;
+}
+
+.cart-jacket-info {
+  position: relative;
+  width: 100%;
+  flex-basis: 75%;
+}
+
+.cart-jacket-info::after {
+  content: "";
+  display: inline-block;
+  background-image: url(/images/trash-can.png);
+  background-size: 24px;
+  width: 24px;
+  height: 30px;
+  background-repeat: no-repeat;
+  position: absolute;
+  right: 12px;
+  top: 12px;
+}
+
+.cart-jacket-number {
+  display: flex;
+  align-self: flex-end;
+  align-items: center;
+}
+
+.cart-jacket-number .subtract,
+.cart-jacket-number .add {
+  content: "";
+  background-image:url(/images/subtract.png);
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: 24px;
+  width: 50px;
+  height: 40px;
+  background-color: var(--orange);
+  border: transparent;
+  border-radius: 25px;
+}
+
+.cart-jacket-number .add {
+  background-image:url(/images/add.png);
+}
+
+.cart-jacket-number .subtract:hover,
+.cart-jacket-number .add:hover {
+  background-color: rgba(252,129,24, 0.7);
+}
+
+.cart-jacket-number .number {
+  background-color: var(--light-blue);
+  width: 45px;
+  height: 45px;
+  margin: 0 10px;
+  text-align: center;
+  font-size:x-large;
+  border-radius: 5px;
+}
+
+.cart-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.discount-code {
+  display: flex;
+  align-self: flex-end;
+  
+
+}
+.discount-code button {
+ 
+}
+
+.summary-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.container-checkout .p-two-columns{
+  display: flex;
+  justify-content: space-between;
+}
+
+.summary-info .total {
+  font-weight: bold;
+}
+
+.light-section,
+.contact-form p {
+  padding: 5%;
+  line-height: 2em;
+}
+
+.text-link-orange {
+  color: var(--orange);
+  font-weight: bold;
+}
+.text-link-orange:hover {
+  color: var(--bright-blue);
+  text-decoration: underline;
+}
+
+.text-link-blue {
+  font-weight: bold;
+  color: var(--dark-blue);
+}
+.text-link-blue:hover {
+  color: var(--orange);
+  text-decoration: underline;
+}
+
+
+.address-form,
+.billing-form {
+  width: fit-content;
+  margin: 0 auto;
+}
+
+
+.address-form input,
+.billing-form input,
+.contact-form input {
+  width: 100%;
+  margin-bottom: 5px;
+}
+
+.address-form label,
+.billing-form label,
+.contact-form label {
+  display: block;
+  margin-top: 15px;
+}
+.address-name,
+.postal-town,
+.expiration-ccv {
+  display: inline-flex;
+  column-gap: 15px;
+ 
+
+}
+
+.postal-town #town {
+  flex-basis: 60%;
+}
+
+.postal-town #postalcode {
+  flex-basis: 40%;
+}
+
+/* --- CONTACT PAGE --- */
+.contact-info {
+  text-align: center;
+}
+
+.contact-info a {
+  color: var(--bright-blue);
+  
+}
+
+.contact-info a:hover {
+  text-decoration: underline;
+}
+
+/* --- CHECKOUT SUCCESS PAGE */
+.success {
+  background-color: var(--dark-blue);
+  color: var(--light-blue);
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  margin: 30px 0;
+  align-items: center;
+  margin-top: 140px;
+
+}
+
+.success span {
+  content: "";
+  background-image: url(/images/checkmark-filled.png);
+  background-color: var(--light-blue);
+  width: 250px;
+  height: 250px;
+  background-size: 170px;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  margin-bottom: 30px;
+  
+}
+
+
+
+
+
+
+
+/* --- MEDIA QUERIES --- */
 @media (min-width: 648px) {
   nav {
     display: flex;
@@ -976,6 +1262,17 @@ position: absolute;
   flex: 2;
 }
 
+ /* --- CHECKOUT PAGE --- */
+ .container-checkout,
+ .container-contact {
+  width: 80%;
+  margin: 0 auto;
+}
+.summary-info,
+.contact-info {
+  width: 70%;
+  margin: 0 auto;
+}
 }
  
 
@@ -984,8 +1281,6 @@ position: absolute;
     margin: 0;
     align-self: flex-end;
   }
-
-  /*MEN - JACKET LIST */
 
 }
 
@@ -1030,6 +1325,50 @@ position: absolute;
     width: 50%;
   }
 
+  /* --- ABOUT --- */
+  .container-about {
+    display: flex;
+  }
+
+  #about-img {
+    flex: 1;
+    order: 2;
+    background-position: right;
+    flex-basis: 20%;
+    margin-top: -100px;
+  }
+
+  .container-about-text {
+    flex: 2;
+  }
+
+  .about-light-section {
+    text-align: left;
+  }
+
+  .about-light-section h2 {
+    padding-left: 10%;
+  }
+  .about-light-section p {
+    padding: 0 10%;
+  }
+  .page-heading #about{
+    text-align: left;
+    margin-left: 11%;
+  }
+ /* --- CHECKOUT PAGE --- */
+
+.summary-info {
+  width: 60%;
+  margin: 0 auto;
+}
+.container-checkout,
+ .container-contact {
+  width: 70%;
+  margin: 0 auto;
+}
+ 
+}
 
 
   @media (min-width: 1270px) {
@@ -1071,4 +1410,29 @@ position: absolute;
     top: 0px;
     position: static;
   }
+
+   /* --- CHECKOUT PAGE --- */
+   .container-checkout,
+   .container-contact {
+    display: flex;
+    width: 80%;
+    margin: 0 auto;
+  }
+  .shopping-cart,
+  .contact-info {
+    flex: 1;
+    flex-basis: 20%;
+  }
+  .checkout-forms,
+  .contact-form {
+    flex: 2;
+    margin-left: 50px;
+  }
+  .summary-info,
+  .contact-info {
+    width: 100%;
+    text-align: left;
+  }
+
+  
 }
